--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -26,3 +26,9 @@ body {
   background: image_url('congruent_outline.png');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #E3E85A;
+  font-family: 'kaushan_scriptregular', sans-serif;
+  font-size: 26px;
+}
