styled show.html.erb

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,11 +46,12 @@
 
 <div class="clear"></div>
 
+<br />
+<br />
+
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -72,24 +73,31 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">
           <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-          
-          </button>
+        </button>
       </div>
       <% end %>
     </div>
   </div>
 </div>
 
-<h1>Comments</h1>
+<div class="col-10 offset-1">
+  <h1 class="float-left">Comments</h1>
+  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+  </button>
+</div>
 
-<% @place.comments.each do |comment| %>
-  <div>
-    <blockquote>
-      <% if comment.humanized_rating.present? %>
-        <b><%= comment.humanized_rating %></b> -
-        <% end %>
-        <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
+<div class="clear"></div>
+
+<div class="row">
+  <% @place.comments.each do |comment| %>
+    <div class="col-12 col-sm-6">
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+          <% end %>
+          <%= comment.message %>
+        <small><%= comment.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
