--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -48,13 +48,13 @@
 
 <br />
 <br />
-
+<div class="clear"></div>
      
-      
-  <%= simple_form_for @photo, url: '#' do |f| %>
-    <%= f.input :caption %>
-    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
-  <% end %>
+<%= simple_form_for @picture, url: place_pictures_path(@place) do |f| %>
+  <%= f.input :capt %>
+  <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+<% end %>      
+
     
 
 <!-- Button trigger modal -->
