--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<%= will_paginate @places %>
+
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -7,7 +7,7 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'slider1.jpeg', class: 'd-block img-fluid' %>
+      <%= image_tag 'slider1edit.jpeg', class: 'd-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best Italian Cuisine</h3>
       </div>
@@ -28,6 +28,8 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+<%= will_paginate @places %>
 
 <%= @places.each do |place| %>
   <div class= "booyah-box col-10 offset-1">
@@ -51,6 +53,7 @@
       <small><%= place.comments.last.user.email %></small>
     </blockquote>
   </div>
+
 <% end %>
 <% end %>
 
