--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -12,6 +12,7 @@
   margin-top: 10px;
   margin-bottom: 15px;
   padding: 20px;
+  border-radius: 1%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,13 +28,21 @@ body {
 .navbar {
   background: image_url('congruent_outline.png');
   box-shadow: 0px 1px 3px #2a2a2a;
+  margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand {
   color: #E3E85A;
   font-family: 'kaushan_scriptregular', sans-serif;
   font-size: 26px;
+  margin-bottom: 0;
 }
+
+.navbar .navbar-inverse {
+  margin-bottom: 0;
+}
+
+
 
 .invalid-feedback {
   color: #ff3333;
@@ -81,3 +90,31 @@ image {
   height: 400px;
   width: auto;
 }
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  
+  max-height: auto;
+  width: 850px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  border-radius: 1%;
+  }
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, .5);
+  width: auto;
+  margin-left: 0;
+  
+  border-radius: 5px;
+}
+
+.carousel {
+  width: 850px;
+  margin: auto;
+}
+
