--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,7 +7,7 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'slider1edit.jpeg', class: 'd-block img-fluid' %>
+      <%= image_tag 'slider1.jpeg', class: 'd-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best Italian Cuisine</h3>
       </div>
